4.12.10 (unreleased)
--------------------

- Add optional gzip compression to CommunicationWriter

- Print situation mention kind and intensity in concrete.inspect


4.12.9 (2017-05-13)
-------------------

- Clean up sphinx doc: suppress thrift_spec fields, render
  comments from Thrift verbatim

- Update help for concrete-inspect.py --annotation-headers
  (and a few other help messages)

- Add --other-tag option to concrete-inspect.py to enable CoNLL output
  of arbitrary token tags

- Move get_tokenizations from concrete.inspect to
  concrete.util.tokenization

- Added PropertyLists to situation-mentions output of
  concrete-inspect.py

- Fix concrete2json TJSONProtocol UTF-8 bug


4.12.8 (2017-02-27)
-------------------

- Store tweet JSON in Communication.originalText.

- Expand/modify functionality of fetch-client.py:
    - Accept communication IDs on standard input
    - Write results to tar.gz archive

- Expand functionality of search-client.py:
    - Accept search terms as command-line arguments
    - Populate SearchQuery.rawQuery field
    - Add command-line flags --about, --alive, --capabilities, --corpora

- Add child mentions to "concrete-inspect.py --entities" output.

- concrete.util.simple_comm.create_sentence now sets Token.textSpan field

- CommunicationWriterTar.write() now uses CommID for default filename

- concrete.validate.validate_communication_file() now returns a boolean

- Added script access-http-server.py

- Now using Sphinx to generate documentation

- fetch-client.py can now read Communication IDs from stdin,
  and save Communications to a TGZ file

4.12.7 (2017-01-29)
-------------------

- Add brief tutorial to README.rst.

- Switch to zest.releaser for releases.

- Add Python 3 support.


4.12.6 (2017-01-28)
-------------------

- Refactor build, simplifying with tox.

- Turn on public Appveyor and GitHub builds.

- Remove hard numpy/scipy dependency in concrete.util.tokenization,
  adding (slower) fallback implementations.
